Add navigation links

--- a/terminology.html
+++ b/terminology.html
@@ -39,7 +39,11 @@
       <li><a href="assistivetechnology.html">Assistive Technology</a></li>
       <li><a href="tts.html"><abbr title="Text-to-speech software">TTS</abbr></a></li>
       <li><a href="accessibilityforusers.html">Accessibility for Computer Users</a></li>
+      <li><a href="body-of-knowledge-certificates.html"><abbr title="Body of Knowledge">BOK</abbr> and Certificates</a></li>
       <li class="active"><a aria-current="page" href="terminology.html">Terminology</a></li>
+      <li><a href="social-legal.html">Social and Legal Aspects</a></li>
+      <li><a href="features-failures-examples.html">Failure Examples</a></li>
+      <li><a href="miscellaneous-links.html">Miscellaneous Links</a></li>
     </ul>
   </nav>
 
