Add: Braille Institute of America

--- a/features-failures-examples.html
+++ b/features-failures-examples.html
@@ -373,6 +373,12 @@
             </li>
           </ul>
         </li>
+        <li><a href="https://brailleinstitute.org/">Braille Institute of America</a>:
+          button displaying an eye with a diagonal strikethrough in the top right corner: this button opens a widget that enables the user to
+          (1) resize the font, (2) choose a different background colour, (3) highlight links and (4) reset these settings.
+          The <a href="https://brailleinstitute.org/web-accessibility-statement">Accessibility Statement for Braille Institute</a>
+          does not mention this widget. (Accessed on 14.05.2021.)
+        </li>
       </ul>
     </section>
     <!--
