Add: Barrierefreie Lehrvideos (FH Dortmund)

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -39,7 +39,11 @@
       <li><a href="assistivetechnology.html">Assistive Technology</a></li>
       <li><a href="tts.html"><abbr title="Text-to-speech software">TTS</abbr></a></li>
       <li><a href="accessibilityforusers.html">Accessibility for Computer Users</a></li>
+      <li><a href="body-of-knowledge-certificates.html"><abbr title="Body of Knowledge">BOK</abbr> and Certificates</a></li>
       <li><a href="terminology.html">Terminology</a></li>
+      <li><a href="social-legal.html">Social and Legal Aspects</a></li>
+      <li><a href="features-failures-examples.html">Failure Examples</a></li>
+      <li><a href="miscellaneous-links.html">Miscellaneous Links</a></li>
     </ul>
   </nav>
 
@@ -974,6 +978,10 @@
       <li>
         <a href="https://dcmp.org/learn/descriptionkey">Description Key</a>:
         Guidelines and Best Practices for Describing Educational Video.
+      </li>
+      <li><span lang="de">
+        <a href="https://blog.ilias.fh-dortmund.de/barrierefreie-lehrvideos/" hreflang="de">Barrierefreie Lehrvideos</a>,
+        <i class="blog">E-Learning Koordinierungsstelle, <abbr>FH</abbr> Dortmund</i></span> (no date; accessed on 11.05.2021).
       </li>
     </ul>
 
