Add: Felix: EU needs to make accessibility standards affordable

--- a/social-legal.html
+++ b/social-legal.html
@@ -292,6 +292,10 @@
         <br />See also the press release
         <a href="https://www.dbsv.org/aktuell/dbsv-verabschiedet-resolution-zur-bundestagswahl.html" hreflang="de" lang="de"><abbr>DBSV</abbr> verabschiedet Resolution zur Bundestagswahl</a>.
       </li>
+      <li>Felix, Andre:
+        <a href="https://www.edf-feph.org/affordablestandards-eu-needs-to-make-accessibility-standards-affordable/"><abbr>EU</abbr> needs to make accessibility standards affordable</a>,
+        <i class="website"><abbr>EDF</abbr></i>, 20.05.2021.
+      </li>
     </ul>
 
     <h3>Outside the European Union</h3>
