--- a/body-of-knowledge-certificates.html
+++ b/body-of-knowledge-certificates.html
@@ -39,9 +39,10 @@
       <li><a href="assistivetechnology.html">Assistive Technology</a></li>
       <li><a href="tts.html"><abbr title="Text-to-speech software">TTS</abbr></a></li>
       <li><a href="accessibilityforusers.html">Accessibility for Computer Users</a></li>
-      <li class="active"><a aria-current="page" href="body-of-knowledge-certificates.html">Accessibility Body of Knowledge and Certificates</a></li>
+      <li class="active"><a aria-current="page" href="body-of-knowledge-certificates.html"><abbr title="Body of Knowledge">BOK</abbr> and Certificates</a></li>
       <li><a href="terminology.html">Terminology</a></li>
       <li><a href="social-legal.html">Social and Legal Aspects</a></li>
+      <li><a href="features-failures-examples.html">Failure Examples</a></li>
       <li><a href="miscellaneous-links.html">Miscellaneous Links</a></li>
     </ul>
   </nav>
