add: Byrne-Haber: Concerns with Accessibe joining W3C

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -2211,6 +2211,10 @@
           <br />AccessiBe is the largest automated accessibility company on the market, according to Lucy Greco, who is blind and the head of web accessibility at the University of California, Berkeley.</q>
           <!--Referrer: https://twitter.com/A11yNews/status/1391754937743335424 -->
         </li>
+        <li>Byrne-Haber, Sheryl:
+          <a href="https://lists.w3.org/Archives/Public/w3c-wai-ig/2021AprJun/0146.html">Concerns with Accessibe joining <abbr>W3C</abbr></a>,
+          <i class="website">Web Accessibility Initiative (<abbr>WAI</abbr>) Interest Group (<abbr>IG</abbr>) Discussion list</i>, 27.05.2021.
+        </li>
       </ul>
       <h4 id="overlaytools-list">Overlay Tools: List of Tools</h4>
       <p>Below is a list of overlay tools (with some of their overblown and misleading claims). Since making a website accessible is a process that cannot be automated,
