Add: Angular Accessibility

--- a/WebAppAccessibilityResources.html
+++ b/WebAppAccessibilityResources.html
@@ -502,6 +502,29 @@
     <!-- Responsive web design in general (no discussion of accessibility):
       * Ben Frain: Responsive Web Design with HTML5 and CSS3 - Second Edition. Packt Publishing, August 2015: https://www.packtpub.com/web-development/responsive-web-design-html5-and-css3-second-edition
     -->
+    <section>
+      <h2>Other Links</h2>
+      <ul>
+        <li>Shaked, Uri:
+          <a href="https://medium.com/dailyjs/angular-and-accessibility-8ae1f601803a">Angular and Accessibility</a>,
+          <i class="blog">Daily<abbr>JS</abbr> on Medium</i>, 07.04.2017.
+          <!--@@check talk https://www.youtube.com/watch?v=MMxJe4W1P4A -->
+        </li>
+        <li>Ward, Chris:
+          <a href="https://www.telerik.com/blogs/7-ways-to-make-your-angular-app-more-accessible">7 Ways to Make Your Angular App More Accessible</a>,
+          <i class="blog">Progress blog</i>, 20.08.2019.
+        </li>
+        <li>MacManus, Richard:
+          <a href="https://thenewstack.io/google-docs-switches-to-canvas-rendering-sidelining-the-dom/">Google Docs Switches to Canvas Rendering, Sidelining the <abbr>DOM</abbr></a>,
+          <i class="website">The New Stack</i>, 24.05.2021.
+          <br />The change has implications for accessibility. The envisioned approach is to use a hidden <abbr>DOM</abbr> that caters just to accessibility.
+          Google and others are also working on a spefication entitled
+          <a href="https://wicg.github.io/aom/spec/">Accessibility Object Model</a> (<abbr>AOM</abbr>, currently an unoffical draft at the <abbr>W3C</abbr>).
+          The side <abbr>DOM</abbr> and the <abbr>AOM</abbr> are being used in the new Google Docs.
+          <!--Referrer: Steve Faulkner, 25.05.2021: https://twitter.com/stevefaulkner/status/1397190712026927112 -->
+        </li>
+      </ul>
+    <section>
     <!--
     <section>
       <h2></h2>
