Add blog entries about Deque Amaze

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -2309,6 +2309,13 @@
           <br />Just insert one-line-of-code and we will do the rest!</q>
           (Accessed on 12.05.2021.)
         </li>
+        <li>
+          <a href="https://www.deque.com/blog/deque-systems-releases-amaze-3-0-general-availability/">Deque Systems Releases Amaze 3.0 For General Availability</a>,
+          <i class="blog">Deque Systems blog</i>, 27.05.2014.
+          <br />See also Caitlin Cashin:
+          <a href="https://www.deque.com/blog/dylan-barrell-talks-amaze/">Dylan Barrell Talks Amaze</a> (21.02.2013).
+          There has been no new information about Amaze since 2014.
+        </li>
       </ul>
     </section>
 
