Add: CEN: EN 17161:2019: Design for All - Accessibility following a Design for All approach in products, goods and services - Extending the range of users

--- a/accessibilityguidelines.html
+++ b/accessibilityguidelines.html
@@ -39,7 +39,11 @@
       <li><a href="assistivetechnology.html">Assistive Technology</a></li>
       <li><a href="tts.html"><abbr title="Text-to-speech software">TTS</abbr></a></li>
       <li><a href="accessibilityforusers.html">Accessibility for Computer Users</a></li>
+      <li><a href="body-of-knowledge-certificates.html"><abbr title="Body of Knowledge">BOK</abbr> and Certificates</a></li>
       <li><a href="terminology.html">Terminology</a></li>
+      <li><a href="social-legal.html">Social and Legal Aspects</a></li>
+      <li><a href="features-failures-examples.html">Failure Examples</a></li>
+      <li><a href="miscellaneous-links.html">Miscellaneous Links</a></li>
     </ul>
   </nav>
 
@@ -405,6 +409,13 @@
 
     <h3>Other Accessibility Standards</h3>
     <ul>
+      <li><abbr>CEN</abbr>:
+        <a href="https://standards.cen.eu/dyn/www/f?p=204:110:0::::FSP_PROJECT,FSP_ORG_ID:62323,2301962&amp;cs=1D28CFDC66E7CEF3CE441294CAA9FEABE"><abbr>EN</abbr> 17161:2019:
+        Design for All - Accessibility following a Design for All approach in products, goods and services - Extending the range of users</a>.
+        See also the news item
+        <a href="https://www.cen.eu/news/brief-news/Pages/NEWS-2019-014.aspx">New <abbr>CEN</abbr> standard: <abbr>EN</abbr> 17161:2019 on Accessibility</a>
+        (no date; accessed on 20.05.2019).
+      </li>
       <li><abbr>ISO</abbr> and <abbr>IEC</abbr>:
         <a href="https://www.iso.org/standard/70913.html"><abbr>ISO</abbr>/<abbr>IEC</abbr> 30071-1:2019: Information technology — Development of user interface accessibility — Part 1: Code of practice for creating accessible <abbr>ICT</abbr> products and services</a>.
         Below is the standard's abstract:
