Add: Williams: The little book of accessibility

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -465,6 +465,10 @@
         <a href="https://www.poolstok.be/diensten/digitale-toegankelijkheid" hreflang="nl">Digitale toegankelijkheid</a>,
         <i class="website">Poolstok</i></span> (no date, possibly January 2021).
       </li>
+      <li>Williams, Gareth Ford:
+        <a href="https://uxdesign.cc/the-little-book-of-accessibility-a9b59d82b412">The little book of accessibility</a>,
+        <i class="website"><abbr>UX</abbr> Collective</i>, 19.05.2021.
+      </li>
     </ul>
 
     <h2>Braille</h2>
