Add: Ignor: Geheimfunktionen für Alexa

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -1428,6 +1428,10 @@
           presentation in the
           <a href="https://archive.fosdem.org/2020/schedule/track/open_source_design/">Open Source Design devroom at FOSDEM 2020</a>.
         </li>
+        <li>Ignor, Sarah:<span lang="de">
+          <a href="https://www.computerbild.de/artikel/cb-News-Internet-Geheimfunktionen-fuer-Alexa-Barrierefreiheit-im-Alltag-30265693.html" hreflang="de">Geheimfunktionen für Alexa: Barrierefreiheit im Alltag mit fünf Kniffen</a>,
+          <i class="website">Computer Bild</i>,</span> 03.06.2021.
+        </li>
       </ul>
     </section>
 
