Add: frames example: Brother Death

--- a/features-failures-examples.html
+++ b/features-failures-examples.html
@@ -259,6 +259,8 @@
         </li>
         <li><a href="http://www.wereldbibliotheek.nl/" hreflang="nl" lang="nl">Wereldbibliotheek</a> (accessed on 22.03.2021).
         </li>
+        <li><a href="http://www.ronnowpoetry.com/BDf.html">Brother Death (Robert Ronnow)</a> (accessed on 07.06.2021).
+        </li>
       </ul>
 
       <h3>Marquee</h3>
