Add overlay tools: Purple Lens, DIGIaccess, Adally widget

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -2034,7 +2034,7 @@
         <li><abbr>CSS</abbr>: <code>pointer-events:none</code> on a <code>label</code> element. See
           <a href="https://twitter.com/patrick_h_lauke/status/1357676332835037186">Patrick Lauke's tweet from 05.02.2021</a>:
           <q cite="https://twitter.com/patrick_h_lauke/status/1357676332835037186">second time i've seen this recently, so to save others a lengthy bug-hunt:
-          if you have a properly associated <code>&lt;label&gt;</code>, but clicking/tapping it doesn't set focus to its correctly associated <code>&lt;input&gt;/form</code> element...
+          if you have a properly associated <code>&lt;label&gt;</code>, but clicking/tapping it doesn't set focus to its correctly associated <code>&lt;input&gt;/&lt;form&gt;</code> element...
           check if for some reason the <code>&lt;label&gt;</code> has pointer-events:none in <abbr>CSS</abbr></q>.
         </li>
         <li>Accessibility options panels:
@@ -2053,7 +2053,7 @@
             </li>
             <li>
               <a href="https://build.fluidproject.org/infusion/demos/uiOptions/">Fluid <abbr>UI</abbr> Options</a>.
-              This open-source tool, developed at OCAD University in Toronto, Canada,
+              This open-source tool, developed at <abbr>OCAD</abbr> University in Toronto, Canada,
               can be embedded into websites. See also the YouTube video
               <a href="https://www.youtube.com/watch?v=63DqNgxtsrA">Introduction to User Interface Options</a>
               (4 minutes, 15.09.2017).
@@ -2216,6 +2216,7 @@
           <i class="website">Web Accessibility Initiative (<abbr>WAI</abbr>) Interest Group (<abbr>IG</abbr>) Discussion list</i>, 27.05.2021.
         </li>
       </ul>
+
       <h4 id="overlaytools-list">Overlay Tools: List of Tools</h4>
       <p>Below is a list of overlay tools (with some of their overblown and misleading claims). Since making a website accessible is a process that cannot be automated,
         the claims by these vendors are misleading.
@@ -2233,6 +2234,7 @@
           (There is even a <a href="https://en.wikipedia.org/wiki/AccessiBe">Wikipedia article about accessiBe</a>.)
           <!--Used, for example, by Sincro: https://www.sincrodigital.com/Websites/Accessibility
             Blissbranding Agency: https://www.blissbranding.com/web-accessibility/
+            Also offered by Access You Can (accessed 10.06.2021): https://accessyoucan.com/solution/
           -->
           (Accessed on 12.05.2021.)
         </li>
@@ -2308,6 +2310,29 @@
           <q>Get <abbr>ADA</abbr> Accessibility supports ALL cross-platform, using our cutting edge technology based on unique <abbr>AI</abbr> algorithms. We can help you make your website and all your digital content accessible without modifying your code.
           <br />Just insert one-line-of-code and we will do the rest!</q>
           (Accessed on 12.05.2021.)
+        </li>
+        <li>
+          <a href="https://purple-lens.com/">Purple Lens</a> (Tel Aviv, Israel):
+          described as follows in the <a href="https://purple-lens.com/faq/"><abbr>FAQ</abbr></a>:
+          <q cite="https://purple-lens.com/faq/">The accessibility tool Purple-Lens is a clever plugin which allows WordPress®️ pages to turn accessible using our assistive technologies.</q>
+          and its functioning is described as follows:
+          <q cite="https://purple-lens.com/faq/">The tool automates the visualization of the site in order to make it more enjoyable to people with disabilities. The tool automates the visualization of the site in order to make it usable for people with a range of disabilities: impaired vision, color blindness, epilepsy, motor difficulties and more.</q>
+          With regard to the level of compliance, the <abbr>FAQ</abbr> says:
+          <q>Using the tool and accomplishing every step from Purple Lab brings the site to meet W3C WIA WACG LEVEL AA requirements.</q>
+          (Accessed on 10.06.2021.)
+        </li>
+        <li>
+          <a href="https://digiaccess.org/" hreflang="de">DIGIaccess</a> (Bonn, Germany).
+          Description on the <a href="https://digiaccess.org/produkt/" hreflang="de">product page</a>:
+          <q cite="https://digiaccess.org/produkt/" lang="de">DIGIaccess ermöglicht es, Webseiten für jeden zugänglich zu machen. Der gesamte Prozess, inklusive der vollständigen Einhaltung der gesetzlichen Rahmenbedingungen, erfolgt zu 100 % automatisch und sofort, wobei <abbr>KI</abbr>-, Lern- und Bildverarbeitungstechnologien genutzt werden.</q>
+          (Accessed on 10.06.2021.)
+        </li>
+        <li>Adally (St. George, Utah, <abbr>USA</abbr>):
+          <a href="https://adally.com/adally-free-accessibility-widget/">Adally Free Accessibility Widget</a>:
+          this widget requires only one line of code to &ldquo;install&rdquo;. The company points out that it is not a full solution:
+          <q cite="https://adally.com/adally-free-accessibility-widget/">Our proprietary widget will not make your website <abbr>ADA</abbr> compliant,
+          no overlay solution will but it is a great first step and creates a better overall experience for website visitors with certain disabilities.</q>
+          (Accessed on 10.06.2021.)
         </li>
         <li>
           <a href="https://www.deque.com/blog/deque-systems-releases-amaze-3-0-general-availability/">Deque Systems Releases Amaze 3.0 For General Availability</a>,
