Add: Advanced PDF Accessibility with Adobe Acrobat Pro DC: Forms

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -356,6 +356,14 @@
         <a href="https://www.youtube.com/watch?v=YE5gZPUXu_A">Example of Using a Screen Reader with an Accessible <abbr>PDF</abbr></a>
         (<i class="ytchannel">Lauren Alcorn</i> on YouTube, 2 minutes, 06.04.2016).
       </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=mXfDNQuXYAo">Advanced <abbr>PDF</abbr> Accessibility with Adobe Acrobat Pro DC: Forms</a>
+        (<i class="ytchannel"><abbr>UA</abbr> Technology Accessibility</i> on YouTube, 59 minutes, 01.05.2019).
+      </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=BPytQ8n66x4">Advanced <abbr>PDF</abbr> Accessibility with Adobe Acrobat Pro DC: Forms</a>
+        (<i class="ytchannel"><abbr>UA</abbr> Technology Accessibility</i> on YouTube, 56 minutes, 25.11.2019).
+      </li>
       <!--
         * https://acrobatusers.com/tutorials/filter/search&category=2&channel=tutorials/
         * "Equidox Accessible PDF Forms", Equidox, 4 minutes, 30.11.2020: https://www.youtube.com/watch?v=7z070N7cf_g
