Add: Business Standard

--- a/features-failures-examples.html
+++ b/features-failures-examples.html
@@ -138,6 +138,11 @@
           <a href="https://www.w3.org/TR/WCAG21/#pause-stop-hide">Success Criterion 2.2.2 Pause, Stop, Hide</a>.
           (Accessed on 11.05.2021.)
         </li>
+        <li>
+          <a href="https://www.business-standard.com/article/international/china-asks-officials-to-halt-mandatory-coronavirus-vaccination-121041201129_1.html">China asks officials to halt mandatory coronavirus vaccination</a>,
+          <i class="website">Business Standard (India)</i>, 12.04.2021.
+          <br />Section "Just in" below the header: this has a play/pause button and previous/next buttons. (Accessed on 13.06.2021.)
+        </li>
       </ul>
       <p>Animated <abbr title="Graphics Interchange Format">GIF</abbr> were very popular in the late 1990s and early 2000s but have become
         less common on websites (except social media). See for example
