Add: animated background example: wormhole app

--- a/features-failures-examples.html
+++ b/features-failures-examples.html
@@ -120,6 +120,10 @@
       <p>These animations constitute an issue because they run longer than a few seconds and cannot be paused or hidden by users.</p>
       <ul>
         <li>
+          <a href="https://wormhole.app/">Wormhole (file sharing)</a>: animated background that represents a wormhole
+          (background image slowly rotates around the centre). (Accessed on 15.06.2021.)
+        </li>
+        <li>
           <a href="https://myprobe.de/">Myprobe</a>: animated background using an <code>iframe</code> that loads a page containing a <code>canvas</code> element.
           (Last accessed on 11.05.2021.)
         </li>
