--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -381,6 +381,10 @@
         <a href="https://www.youtube.com/watch?v=BPytQ8n66x4">Advanced <abbr>PDF</abbr> Accessibility with Adobe Acrobat Pro DC: Forms</a>
         (<i class="ytchannel"><abbr>UA</abbr> Technology Accessibility</i> on YouTube, 56 minutes, 25.11.2019).
       </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=kvZN4WgsE3k">Making Accessible Word Documents Accessible <abbr>PDFs</abbr></a>
+        (<i class="ytchannel">Adam Barragato</i> on YouTube, 3 minutes, 21.09.2017).
+      </li>
       <!--
         * https://acrobatusers.com/tutorials/filter/search&category=2&channel=tutorials/
         * "Equidox Accessible PDF Forms", Equidox, 4 minutes, 30.11.2020: https://www.youtube.com/watch?v=7z070N7cf_g
