Add: Microsoft: Make your PowerPoint presentations accessible ...

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -161,6 +161,10 @@
     <h3>Microsoft PowerPoint</h3>
     <ul>
       <li>
+        <a href="https://support.microsoft.com/en-us/office/make-your-powerpoint-presentations-accessible-to-people-with-disabilities-6f7772b2-2f33-4bd2-8ca7-dae3b2b3ef25">Make your PowerPoint presentations accessible to people with disabilities</a>,
+        <i class="website">Microsoft Office Support</i> (accessed on 18.06.2021).
+      </li>
+      <li>
         <a href="https://webaim.org/techniques/powerpoint/">PowerPoint Accessibility</a>,
         <i class="website">Web<abbr>AIM</abbr></i>, last updated in March 2018.
       </li>
