Add: MS: Make your Word documents accessible ...

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -132,6 +132,12 @@
     <h3>Microsoft Word</h3>
     <ul>
       <li>
+        <a href="https://support.microsoft.com/en-us/office/make-your-word-documents-accessible-to-people-with-disabilities-d9bf3683-87ac-47ea-b91a-78dcacb3c66d">Make your Word documents accessible to people with disabilities</a>,
+        <i class="website">Microsoft Office Support</i> (accessed on 18.06.2021).
+        <br />Microsoft's support documents are also available in other languages (often generated using translation software). For example, the guidance on accessible Word documents is available in German as
+        <a href="https://support.microsoft.com/de-de/topic/gestalten-barrierefreier-word-dokumente-f%C3%BCr-personen-mit-behinderungen-d9bf3683-87ac-47ea-b91a-78dcacb3c66d" hreflang="de" lang="de">Gestalten barrierefreier Word-Dokumente für Personen mit Behinderungen</a>.
+      </li>
+      <li>
         <a href="https://webaim.org/techniques/word/">Microsoft Word: Creating Accessible Documents</a>,
         <i class="website">Web<abbr>AIM</abbr></i>, last updated in July 2016.
       </li>
@@ -163,6 +169,8 @@
       <li>
         <a href="https://support.microsoft.com/en-us/office/make-your-powerpoint-presentations-accessible-to-people-with-disabilities-6f7772b2-2f33-4bd2-8ca7-dae3b2b3ef25">Make your PowerPoint presentations accessible to people with disabilities</a>,
         <i class="website">Microsoft Office Support</i> (accessed on 18.06.2021).
+        <br />Microsoft's support documents are also available in other languages (often generated using translation software). For example, the guidance on accessible PowerPoint presentations is available in German as
+        <a href="https://support.microsoft.com/de-de/topic/gestalten-barrierefreier-powerpoint-pr%C3%A4sentationen-f%C3%BCr-personen-mit-behinderungen-6f7772b2-2f33-4bd2-8ca7-dae3b2b3ef25" hreflang="de" lang="de">Gestalten barrierefreier PowerPoint-Präsentationen für Personen mit Behinderungen</a>.
       </li>
       <li>
         <a href="https://webaim.org/techniques/powerpoint/">PowerPoint Accessibility</a>,
