Add various resources about accessible office docs

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -112,6 +112,11 @@
         <a href="https://www.behindertenbeauftragter.bremen.de/der_beauftragte/zentralstelle_fuer_barrierefreie_informationstechnik/pdfs_und_co__dokumente_barrierefrei_veroeffentlichen-33255" hreflang="de"><abbr>PDF</abbr>s und Co: Dokumente barrierefrei veröffentlichen</a>,
         <i class="website">Der Landesbehindertenbeauftragte der Freien Hansestadt Bremen</i></span> (no date; accessed on 26.02.2021).
       </li>
+      <li>
+        <a href="https://www.gov.uk/government/publications/inclusive-communication/accessible-communication-formats">Guidance: Accessible communication formats</a>,
+        <i class="website">Gov.<abbr>UK</abbr></i>, updated on 15.03.2021.
+        <!--See also "Sample accessible document policy", https://www.gov.uk/government/publications/sample-accessible-document-policy -->
+      </li>
       <li>Microsoft:
         <a href="https://support.office.com/en-us/article/use-the-accessibility-checker-on-your-windows-desktop-to-find-accessibility-issues-a16f6de0-2f39-4a2b-8bd8-5ad801426c7f">Use the Accessibility Checker on your Windows desktop to find accessibility issues</a>
         (this applies to all versions of Microsoft Office for Windows since version 2010)
@@ -159,10 +164,20 @@
           new URL, accessed 16.10.2019: https://terrillthompson.com/517
         -->
       </li>
+      <li>Thompson, Terrill:
+        <a href="https://terrillthompson.com/548">Alt Text in Word: Title vs Description</a>,
+        <i class="blog">Terrill Thompson's blog</i>, 11.07.2014.
+        <br />The word processing programs discussed in this blog post Word 2013 and other programs that were available in July 2014.
+        Since accessibility support has evolved considerable since 2014, the blog post should be considered as historical information only.
+      </li>
       <li><span lang="fr">
         <a href="https://www.technologie-handicap-accessibilite.net/dossiers/creer-des-documents-accessibles/documents-word-accessibles/">Documents Word accessibles</a>,
         <i class="website">Technologie, Handicap, Accessibilité</i></span>, last updated on 19.07.2015.
       </li>
+      <!--line height:
+        * Change line spacing in Word 2010: http://freemicrosoftword2010tutorials.com/change-line-spacing-in-word-2010-configure-default-line-height-settings.htm
+        * how to calculate line height in single line spacing paragraph: https://social.msdn.microsoft.com/Forums/en-US/6198f5be-3bb6-4ebf-9f2e-35447d087b45/how-to-calculate-line-height-in-single-line-spacing-paragraph
+      -->
     </ul>
     <h3>Microsoft PowerPoint</h3>
     <ul>
@@ -239,7 +254,10 @@
         <a href="http://www.pdf-accessible.com/" lang="fr">Accessibilité des documents <abbr>PDF</abbr> et ePub</a>).
         <br />Guidelines for making <abbr>PDF</abbr> documents accessibile with Adobe InDesign;
         you can even download a practice document.
+        <!--@@updated in 2018-->
       </li>
+      <!--@@check: Barrierefreie Dokumente mit InDesign, 20.04.2016: https://friendlytraining.de/news/barrierefreie-dokumente-mit-indesign.html
+      -->
       <li>
         <a href="https://webaim.org/techniques/acrobat/"><abbr>PDF</abbr> Accessibility: Defining Acrobat <abbr>PDF</abbr> Accessibility</a>,
         <i class="website">Web<abbr>AIM</abbr></i>, last updated in <!--July 2014--> April 2019.
