Add: Microsoft support resources on office accessibility

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -194,6 +194,18 @@
     </ul>
     <h3>Other Microsoft Applications</h3>
     <ul>
+      <li>
+        <a href="https://support.microsoft.com/en-us/topic/create-accessible-office-documents-868ecfcd-4f00-4224-b881-a65537a7c155">Create accessible Office documents</a>,
+        <i class="website">Microsoft Office Support</i> (accessed on 18.06.2021).
+      </li>
+      <li>
+        <a href="https://support.microsoft.com/en-us/office/office-accessibility-center-resources-for-people-with-disabilities-ecab0fcf-d143-4fe8-a2ff-6cd596bddc6d">Office Accessibility Center - Resources for people with disabilities</a>,
+        <i class="website">Microsoft Office Support</i> (accessed on 18.06.2021).
+      </li>
+      <li>
+        <a href="https://support.microsoft.com/en-us/office/make-your-excel-documents-accessible-to-people-with-disabilities-6cc05fc5-1314-48b5-8eb3-683e49b3e593">Make your Excel documents accessible to people with disabilities</a>,
+        <i class="website">Microsoft Office Support</i> (accessed on 18.06.2021).
+      </li>
       <li>Microsoft:
         <a href="https://support.office.com/en-us/article/Accessibility-support-for-Visio-7ac46c50-02c2-44ab-aa1c-711482099276">Accessibility support for Visio</a>:
         this document covers Visio Professional 2016 and more recent versions.
