Add: shouldiuseacarousel.com

--- a/features-failures-examples.html
+++ b/features-failures-examples.html
@@ -173,6 +173,10 @@
         <li><a href="https://www.labaraqueauxarts.com/" hreflang="fr" lang="fr">La baraque aux arts</a>:
           intro animation that lasts around 12 seconds.
         </li>
+        <li>
+          <a href="https://shouldiuseacarousel.com/">Should I Use A Carousel?</a>
+          (accessed on 17.06.2021).
+        </li>
       </ul>
       <h3>Flashes or Flashing Content</h3>
       <ul>
