Add: Rietveld: We need to talk about WCAG

--- a/accessibilityguidelines.html
+++ b/accessibilityguidelines.html
@@ -194,6 +194,13 @@
             <a href="https://www.deque.com/blog/wcag-2-1-what-is-next-for-accessibility-guidelines/"><abbr>WCAG</abbr> 2.1: What is Next for Accessibility Guidelines</a>,
             <i class="blog">Deque blog</i>, 24.04.2018.
           </li>
+          <li>Rietveld, Rian:
+            <a href="https://level-level.com/blog/we-need-to-talk-about-wcag/">We need to talk about <abbr>WCAG</abbr></a>,
+            <i class="blog">Level Level Rotterdam</i>, 18.05.2021.
+            <!--Referrer: Birkir Gunnarson: https://twitter.com/birkir_gun/status/1406908334641459205 -->
+            <br /><a href="https://twitter.com/dennisl/status/1406889625990406145">Dennis Lembrée tweeted this blog post</a>, pulling out one specific quote:
+            <q cite="https://twitter.com/dennisl/status/1406889625990406145">Stop adding new Success Criteria before the most recent ones have been properly documented, explained and better adopted into websites worldwide.</q>
+          </li>
         </ul>
       </li>
       <!--Trace R&D Center: Page Author Guidelines - Version 8: Unified Web Site Accessibility Guidelines: January 1998: https://www.w3.org/WAI/GL/author.htm -->
