Add: Wheelchair fails etc.

--- a/social-legal.html
+++ b/social-legal.html
@@ -634,6 +634,23 @@
       <li>
         <a href="https://www.cambridge.org/de/academic/subjects/law/human-rights/series/cambridge-disability-law-and-policy-series">Cambridge Disability Law and Policy Series</a>.
       </li>
+
+      <li>Hawkins, Andrew J.:
+        <a href="https://www.theverge.com/2018/5/23/17384600/uber-lyft-wheelchair-accessible-fail-nyc-report">Uber and Lyft are terrible at providing wheelchair-accessible service, and here’s the proof</a>,
+        <i class="website">The Verge</i>, 23.05.2018.
+      </li>
+      <li>Landman, Hanna:
+        <a href="https://www.avacaremedical.com/blog/wheelchair-accessibility-fails.html">Wheelchair Accessibility Bloopers</a>,
+        <i class="blog">Avacare Medical Blog</i>, 29.03.2017.
+      </li>
+      <li>Robinson, Syd:
+        <a href="https://www.buzzfeed.com/sydrobinson1/accessible-design-fails">14 Times "Accessible" Design Severely Failed People With Disabilities</a>,
+        <i class="website">BuzzFeed</i>, 20.06.2021.
+      </li>
+      <li>Romaine, Jenna:
+        <a href="https://thehill.com/changing-america/respect/accessibility/559098-utah-yearbook-photo-excludes-cheerleader-with-down">Utah yearbook photo excludes cheerleader with Down syndrome</a>,
+        <i class="website">The Hill</i>, 17.06.2021.
+      </li>
     </ul>
     <!--
     <section>
