Add: Luxembourg: Référentiel d'évaluation de l'accessibilité des applications mobiles

--- a/MobileAccessibilityResources.html
+++ b/MobileAccessibilityResources.html
@@ -174,6 +174,12 @@
         <a href="https://www.24a11y.com/2017/accessibility-resizing-text/">Accessibility in Resizing Text</a>,
         <i class="website">24 Accessibility</i>, 08.12.2017.
       </li>
+      <li><span lang="fr">
+        <a href="https://accessibilite.public.lu/fr/raam1/" hreflang="fr">Référentiel d'évaluation de l'accessibilité des applications mobiles (<abbr>RAAM</abbr> 1) : Introduction</a>,
+        <i class="website">Portail de l'accessibilité numérique, Le Gouvernement du Grand-Duché de Luxembourg</i></span>, 21.06.2021.
+        This evaluation method is based on the standard <abbr>EN</abbr> 301 549 v.3.2.1 and is available under the terms of the <abbr>CC-BY</abbr> 3.0 <abbr>LU</abbr> licence.
+        See <a href="https://github.com/accessibility-luxembourg/ReferentielAccessibiliteMobile"><span lang="fr">Référentiel d'évaluation de l'accessibilité des applications mobiles (<abbr>RAAM</abbr> 1) version 1.0</span> on GitHub</a>.
+      </li>
     </ul>
 
     <h3>Finding Accessible Apps and Devices</h3>
