Add: Matuzovic: Building the most inaccessible site possible with a perfect Lighthouse score

--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -871,6 +871,10 @@
       <a href="https://www.colorzilla.com/">ColorZilla</a>:
       an eyedropper, colour picker and colour analyser that is available as an add-on for Firefox and Chrome.
     </li>
+    <li>Matuzović, Manuel:
+      <a href="https://www.matuzo.at/blog/building-the-most-inaccessible-site-possible-with-a-perfect-lighthouse-score/">Building the most inaccessible site possible with a perfect Lighthouse score</a>,
+      <i class="blog">Manuel Matuzović</i>, 31.05.2019.
+    </li>
   </ul>
   <!--
   <section>
