Add: eatgenesis.com: SVG animations

--- a/features-failures-examples.html
+++ b/features-failures-examples.html
@@ -53,6 +53,9 @@
       The page is not intended as a hall of shame but as a quarry from which accessibility advocates and lecturers can retrieve examples of specific accessibility issues.
       Obviously, the links go out of date when the referenced pages get updated in a way that eliminates the issue; for this reason, the access dates are also given.
     </p>
+    <p>Other examples than those listed below can be found in articles such as
+      <a href="https://85ideas.com/blog/bad-website-design/">8 Examples Of Bad Web Design in 2021</a>.
+    </p>
     <section>
       <h2>Pages Featuring Various Accessibility Issues</h2>
       <h3>Low Contrast</h3>
@@ -119,6 +122,11 @@
       <h3>Animations and Animated Background</h3>
       <p>These animations constitute an issue because they run longer than a few seconds and cannot be paused or hidden by users.</p>
       <ul>
+        <li>
+          <a href="https://eatgenesis.com/">Eat Genesis</a> uses <abbr>SVG</abbr> animations. There is no visible keyboard focus.
+          (Accessed on 22.06.2021.)
+          <!--Referrer: https://www.mockplus.com/blog/post/best-animated-websites -->
+        </li>
         <li>
           <a href="https://wormhole.app/">Wormhole (file sharing)</a>: animated background that represents a wormhole
           (background image slowly rotates around the centre). (Accessed on 15.06.2021.)
