Add: lists without list markup

--- a/features-failures-examples.html
+++ b/features-failures-examples.html
@@ -336,6 +336,28 @@
           marquee in the page header (<span lang="de">&laquo;Aktuell&rquo;) (access on 05.04.2021).
         </li>
       </ul>
+      <p>Lists without list markup:</p>
+      <ul>
+        <li>
+          <a href="https://www.cbass.com/">Clarence Bass</a>: this page contains a list marked up with two asterisks followed by a link and a line break for each list item:
+          <code>
+            &lt;span style="font-size: 12.0pt; font-family: Times New Roman">&lt;br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; **&lt;/span>&lt;/b>
+            &lt;font face="Times New Roman">&lt;b>&nbsp;&lt;/b>&lt;/font>
+            &lt;font color="#0000FF">&lt;span style="background-color: #FFFFFF; background-position: 0% 0%">&lt;a href="quadstrength.html">Quad Strength Plummets in 80s&lt;/a>&lt;/span>&lt;/font>
+          </code>
+          <br />Numbered lists are also implemented without <code>ol</code>; see the page
+          <a href="https://www.cbass.com/fatloss_weightcontrol.htm">Clarence Bass' Fat Loss and Weight Control Articles</a>.
+        </li>
+      </ul>
+      <h3>Mystery Meat Navigation</h3>
+      <ul>
+        <li><a href="https://www.elbenwald.de/Game-of-Thrones/">Game of Thrones | Fanartikel aus Westeros | <span lang="de">Elbenwald</span></a>:
+          the brands are identified in the navigation as &ldquo;7 9 w 2 r 5 u o s v p 4 y&rdquo; instead of
+          &ldquo;Harry Potter, Der Herr der Ringe, Star Wars, Batman, Game of Thrones, Marvel, Disney, Deadpool, Zelda, Supernatural, Avengers, and Rick and Morty&rdquo;, respectively.
+          For example, Game of Thrones is represented as &ldquo;5&rdquo;; only hovering over the link reveals the brand name.
+          (Accessed on 25.06.2021.)
+        </li>
+      </ul>
       <!--Example pages:
         * with old-fashioned pop-up menu: http://www.alanwood.net/unicode/cjk_unified_ideographs.html
         * noscript element (visible with NoScript enabled in the browser): http://www.apress.com/us/book/9781484219157 & https://communities.ca.com/ideas/235735203 etc etc.
