Add: Van Gils: Alles wat je moet weten over de verplichte toegankelijkheid van overheidsapps; Bialka

--- a/social-legal.html
+++ b/social-legal.html
@@ -112,6 +112,10 @@
         <a href="https://siteimprove.com/en/accessibility/eu-web-accessibility-directive/">What Is The European Web Accessibility directive?</a>,
         <i class="website">Siteimprove</i>, 08.03.2020.
       </li>
+      <li><span lang="nl">Van Gils, Roel:
+        <a href="https://medium.com/eleven-ways/alles-wat-je-moet-weten-over-de-verplichte-toegankelijkheid-van-overheidsapps-b594e253be48" hreflang="nl">Alles wat je moet weten over de verplichte toegankelijkheid van overheidsapps</a>,</span>
+        <i class="blog">Eleven Ways</i> on Medium, 23.06.2021.
+      </li>
     </ul>
 
     <h4>European Accessibility Act</h4>
@@ -497,6 +501,10 @@
       <i>Pocklington Trust, Thomas:
         <a href="https://www.fenews.co.uk/press-releases/65294-blind-and-partially-sighted-students-struggling-to-access-online-exams">Blind and partially sighted students struggling to access online exams</a>,
         <i class="website"><abbr>FE</abbr> News</i>, 17.03.2021.
+      </li>
+      <li>Bialka, Christa:
+        <a href="https://theconversation.com/college-students-with-disabilities-are-too-often-excluded-105027">College students with disabilities are too often excluded</a>,
+        <i class="website">The Conversation</i>, 05.11.2018 (Creative Commons).
       </li>
       <!--Studying with a disability
         * https://best-umfrage.de/
