--- a/social-legal.html
+++ b/social-legal.html
@@ -452,6 +452,22 @@
       </li>
     </ul>
 
+    <h2>Etiquette</h2>
+    <ul>
+      <li>
+        <a href="https://www.youtube.com/watch?v=Gv1aDEFlXq8">Disability Sensitivity Training Video</a>
+        (<i class="ytchannel">dcgovernment</i> on YouTube, 4 minutes, 02.10.2014).
+      </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=W6c6JLbczC8">How to Treat a Person with Disabilities, According to People with Disabilities</a>
+        (<i class="ytchannel">VICE</i> on YouTube, 4 minutes, 28.11.2018).
+      </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=2pAOuRW6PVA">Disability Etiquette Training</a>
+        (<i class="ytchannel">Ohio <abbr>OOD</abbr></i> on YouTube, 70 minutes, 20.07.2020).
+      </li>
+    </ul>
+
     <h2>Studying with a Disability</h2>
     <p>The resources listed below focus mainly on higher education.</p>
     <ul>
