Add: h2: Other links

--- a/features-failures-examples.html
+++ b/features-failures-examples.html
@@ -426,6 +426,16 @@
         </li>
       </ul>
     </section>
+
+    <section>
+      <h2>Other Links</h2>
+      <ul>
+        <li>Baer, Jay:
+          <a href="https://www.convinceandconvert.com/digital-marketing/accessible-website-examples/">20 Awesome Examples of Accessible Websites</a>,
+          <i class="website">Convince &amp; Convert</i>, 03.03.2021.
+        </li>
+      </ul>
+    </section>
     <!--
     <section>
       <h2></h2>
